test/src/test/k3s/dev/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-dashboard
    spec:
      containers:
        - name: kubernetes-dashboard
          image: docker.io/kubernetesui/dashboard:v2.7.0
          imagePullPolicy: IfNotPresent
          args:
            - --namespace=default
            - --disable-settings-authorizer=true
            - --metrics-provider=none
          ports:
            - name: http
              containerPort: 9090
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 60
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      serviceAccountName: kubernetes-dashboard
      terminationGracePeriodSeconds: 0
      volumes:
        - name: tmp
          emptyDir: {}
