test/src/test/k3s/dev/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
